--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </div>
       <div class="weather">
         <div class="temperature">
-          <h2>00&#176;C</h2>
+          <h2 id="temperature"></h2>
         </div>
         <div class="condition">
           <img
