--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
       </div>
       <div class="location">
         <input type="text" id="city" placeholder="Enter a location" />
-        <button type="button" onclick="savecity()">Get Weather</button>
+        <button type="button" onclick="cityname()">Get Weather</button>
       </div>
       <div class="weather">
         <div class="temperature">
-          <h2 id="temperature"></h2>
+          <h2 id="temperature"> "&#176;C"</h2>
         </div>
         <div class="condition">
           <img
