--- a/index.html
+++ b/index.html
@@ -105,24 +105,42 @@
             <h2>&#176;C</h2>
           </div>
           <div class="condition">
-            <img id="img"/>
+            <img id="img" />
             <h3 id="condition"></h3>
           </div>
         </div>
       </div>
       <div>
-        <div class="details">
-          <div class="detail">
-            <p >Feels like in &#176;C </p>
-            <p id="feel">00&#176;C</p>
+        <div>
+          <div class="details">
+            <div class="detail">
+              <p>Feels like in &#176;C</p>
+              <p id="feel">00&#176;C</p>
+            </div>
+            <div class="detail">
+              <p>Humidity in %</p>
+              <p id="humidity">00%</p>
+            </div>
+            <div class="detail">
+              <p>Wind in Km/hr</p>
+              <p id="wind">00 km/h</p>
+            </div>
           </div>
-          <div class="detail">
-            <p>Humidity in %</p>
-            <p id="humidity">00%</p>
-          </div>
-          <div class="detail">
-            <p>Wind in Km/hr</p>
-            <p id="wind">00 km/h</p>
+        </div>
+        <div>
+          <div class="details">
+            <div class="detail">
+              <p>Gust in Km/hr</p>
+              <p id="gust">00km/h</p>
+            </div>
+            <div class="detail">
+              <p>Pressure</p>
+              <p id="pressure">00km/h</p>
+            </div>
+            <div class="detail">
+              <p>Wind degree</p>
+              <p id="windDegree">00</p>
+            </div>
           </div>
         </div>
       </div>
