--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   </head>
 
   <body>
+    <header>
     <!--Nav bar-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
@@ -144,8 +145,12 @@
           </div>
         </div>
       </div>
-    </div>
+    </div></header>
+<div class="second">
+ 
 
+
+</div>
     <!-- footer -->
     <div class="col-12 footer1">
       <!-- add footer content -->
