--- a/index.html
+++ b/index.html
@@ -101,16 +101,15 @@
           <button type="button" onclick="cityname()">Get Weather</button>
         </div>
         <div class="weather">
-          <div class="temperature">
-            <h2 id="temperature">00</h2>
-            <h2>&#176;C</h2>
-          </div>
+          <div class="transbox">
+            <p id="temperature">00</p>
+            <p> &#176;C &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp;</p>
+          
           <div class="condition">
-            <img id="img" />
-            <h3 id="condition"></h3>
+            <img id="img" /><h3 id="condition"></h3>
           </div>
         </div>
-      </div>
+      </div></div>
       <div>
         <div>
           <div class="details">
