added new changes

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="leftrightDiv">
       <div class="col-5 container">
         <div class="title">
-          <h1>Weather App</h1>
+          <h>Weather App</h>
         </div>
         <div class="location">
           <input type="text" id="city" placeholder="Enter a location" />
