--- a/index.html
+++ b/index.html
@@ -146,8 +146,9 @@
       </div>
     </div></header>
 <div class="second">
- 
 
+<!--<a href="https://on.windy.com/7s818"><p class="resource">
+  Wind map & weather forecast</p></a>--->
 
 </div>
     <!-- footer -->
