--- a/index.html
+++ b/index.html
@@ -1,94 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- css files -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="Style.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- js files -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-      crossorigin="anonymous"
-    ></script>
+  <!-- css files -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
+  <link rel="stylesheet" href="Style.css" />
 
-    <script type="text/javascript" src="script.js"></script>
 
-    <!-- title -->
-    <title>Weather App</title>
-  </head>
 
-  <body>
-    <header>
-    <!--Nav bar-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+  <!-- title -->
+  <title>Weather App</title>
+
+  <style>
+
+    .mar {
+      margin-left:30px;
+    }
+
+    .nav-item:hover {
+     
+      transform: scale(1.1);
+    }
+
+    /* #search{
+      margin-left: 450px;
+    } */
+  </style>
+
+</head>
+
+<body>
+  <header>
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand logo" href="#">Watch Weather</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+        <a class="navbar-brand" href="#">
+            <img src="./images/logo/logo2.png" alt="" height="40">
+          </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Dropdown
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+
+
+            <li class="nav-item mar">
+              <a class="nav-link active" href="index.html">
+
+              Home
+
               </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
             </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
+            <li class="nav-item mar">
+              <a class="nav-link active" href="signup.html">
+
+                Sign Up
+
+              </a>
+            </li>
+            <li class="nav-item mar">
+              <a class="nav-link active" href="signin.html">
+
+               Sign In
+
+              </a>
+            </li>
+            <li class="nav-item mar">
+              <a class="nav-link active" href="aboutus.html">
+
+                About Us
+
+
+              </a>
+            </li>
+            <li class="nav-item mar">
+              <a class="nav-link active" href="contactus.html">
+                Contact Us
+              </a>
             </li>
           </ul>
-          <form class="d-flex" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search City"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
-          </form>
+
+          <form class="d-flex" role="search" id="search">
+                <input
+                  class="form-control me-2"
+                  type="search"
+                  placeholder="Search City"
+                  aria-label="Search"
+                />
+                <button class="btn btn-outline-success" type="submit">
+                  Search
+                </button>
+              </form>
         </div>
       </div>
     </nav>
+   
 
     <!--main body-->
     <div class="leftrightDiv">
@@ -103,57 +115,68 @@
         <d iv class="weather">
           <div class="transbox">
             <p id="temperature">00</p>
-            <p> &#176;C &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp;</p>
-          
-          <div class="condition">
-            <img id="img" /><h3 id="condition"></h3>
+            <p> &#176;C &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
+
+            <div class="condition">
+              <img id="img" />
+              <h3 id="condition"></h3>
+            </div>
           </div>
-        </div>
-      </div></div>
+      </div>
+    </div>
+    <div>
       <div>
-        <div>
-          <div class="details">
-            <div class="detail">
-              <p>Feels like in &#176;C</p>
-              <p id="feel">00&#176;C</p>
-            </div>
-            <div class="detail">
-              <p>Humidity in %</p>
-              <p id="humidity">00%</p>
-            </div>
-            <div class="detail">
-              <p>Wind in Km/hr</p>
-              <p id="wind">00 km/h</p>
-            </div>
+        <div class="details">
+          <div class="detail">
+            <p>Feels like in &#176;C</p>
+            <p id="feel">00&#176;C</p>
           </div>
-        </div>
-        <div>
-          <div class="details">
-            <div class="detail">
-              <p>Gust in Km/hr</p>
-              <p id="gust">00km/h</p>
-            </div>
-            <div class="detail">
-              <p>Pressure</p>
-              <p id="pressure">00km/h</p>
-            </div>
-            <div class="detail">
-              <p>Wind degree</p>
-              <p id="windDegree">00</p>
-            </div>
+          <div class="detail">
+            <p>Humidity in %</p>
+            <p id="humidity">00%</p>
+          </div>
+          <div class="detail">
+            <p>Wind in Km/hr</p>
+            <p id="wind">00 km/h</p>
           </div>
         </div>
       </div>
-    </div></header>
-<div class="second">
+      <div>
+        <div class="details">
+          <div class="detail">
+            <p>Gust in Km/hr</p>
+            <p id="gust">00km/h</p>
+          </div>
+          <div class="detail">
+            <p>Pressure</p>
+            <p id="pressure">00km/h</p>
+          </div>
+          <div class="detail">
+            <p>Wind degree</p>
+            <p id="windDegree">00</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </header>
+  <div class="second">
 
-<!--<a href="https://on.windy.com/7s818"><p class="resource">
+    <!--<a href="https://on.windy.com/7s818"><p class="resource">
   Wind map & weather forecast</p></a>--->
 
-</div>
-    <!-- footer -->
-    <div class="col-12 footer1">
-      <!-- add footer content -->
-    </div>
-  </body>
+  </div>
+  <!-- footer -->
+  <div class="col-12 footer1">
+    <!-- add footer content -->
+  </div>
+
+  <!-- js files -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+
+  <script type="text/javascript" src="script.js"></script>
+</body>
+
 </html>
