--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
   <title>Weather App</title>
 
   <style>
-
     .mar {
-      margin-left:30px;
+      margin-left: 30px;
     }
 
     .nav-item:hover {
-     
+
       transform: scale(1.1);
     }
 
@@ -40,8 +39,8 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <img src="./images/logo/logo2.png" alt="" height="40">
-          </a>
+          <img src="./images/logo/logo2.png" alt="" height="40">
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -53,7 +52,7 @@
             <li class="nav-item mar">
               <a class="nav-link active" href="index.html">
 
-              Home
+                Home
 
               </a>
             </li>
@@ -67,7 +66,7 @@
             <li class="nav-item mar">
               <a class="nav-link active" href="signin.html">
 
-               Sign In
+                Sign In
 
               </a>
             </li>
@@ -87,20 +86,15 @@
           </ul>
 
           <form class="d-flex" role="search" id="search">
-                <input
-                  class="form-control me-2"
-                  type="search"
-                  placeholder="Search City"
-                  aria-label="Search"
-                />
-                <button class="btn btn-outline-success" type="submit">
-                  Search
-                </button>
-              </form>
+            <input class="form-control me-2" type="search" placeholder="Search City" aria-label="Search" />
+            <button class="btn btn-outline-success" type="submit">
+              Search
+            </button>
+          </form>
         </div>
       </div>
     </nav>
-   
+
 
     <!--main body-->
     <div class="leftrightDiv">
@@ -122,42 +116,42 @@
               <h3 id="condition"></h3>
             </div>
           </div>
-      </div>
-    </div>
-    <div>
-      <div>
-        <div class="details">
-          <div class="detail">
-            <p>Feels like in &#176;C</p>
-            <p id="feel">00&#176;C</p>
-          </div>
-          <div class="detail">
-            <p>Humidity in %</p>
-            <p id="humidity">00%</p>
-          </div>
-          <div class="detail">
-            <p>Wind in Km/hr</p>
-            <p id="wind">00 km/h</p>
-          </div>
         </div>
       </div>
       <div>
-        <div class="details">
-          <div class="detail">
-            <p>Gust in Km/hr</p>
-            <p id="gust">00km/h</p>
+        <div>
+          <div class="details">
+            <div class="detail">
+              <p>Feels like in &#176;C</p>
+              <p id="feel">00&#176;C</p>
+            </div>
+            <div class="detail">
+              <p>Humidity in %</p>
+              <p id="humidity">00%</p>
+            </div>
+            <div class="detail">
+              <p>Wind in Km/hr</p>
+              <p id="wind">00 km/h</p>
+            </div>
           </div>
-          <div class="detail">
-            <p>Pressure</p>
-            <p id="pressure">00km/h</p>
-          </div>
-          <div class="detail">
-            <p>Wind degree</p>
-            <p id="windDegree">00</p>
+        </div>
+        <div>
+          <div class="details">
+            <div class="detail">
+              <p>Gust in Km/hr</p>
+              <p id="gust">00km/h</p>
+            </div>
+            <div class="detail">
+              <p>Pressure</p>
+              <p id="pressure">00km/h</p>
+            </div>
+            <div class="detail">
+              <p>Wind degree</p>
+              <p id="windDegree">00</p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
     </div>
   </header>
   <div class="second">
