updated pages with navbar

--- a/index.html
+++ b/index.html
@@ -25,10 +25,6 @@
 
       transform: scale(1.1);
     }
-
-    /* #search{
-      margin-left: 450px;
-    } */
   </style>
 
 </head>
@@ -71,7 +67,7 @@
               </a>
             </li>
             <li class="nav-item mar">
-              <a class="nav-link active" href="aboutus.html">
+              <a class="nav-link active" href="about.html">
 
                 About Us
 
@@ -85,7 +81,7 @@
             </li>
           </ul>
 
-          <form class="d-flex" role="search" id="search">
+          <form class="d-flex" role="search" >
             <input class="form-control me-2" type="search" placeholder="Search City" aria-label="Search" />
             <button class="btn btn-outline-success" type="submit">
               Search
