--- a/about.html
+++ b/about.html
@@ -4,9 +4,84 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Bootstrap demo</title>
+        <style>
+            .mar {
+              margin-left: 30px;
+            }
+        
+            .nav-item:hover {
+        
+              transform: scale(1.1);
+            }
+          </style>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     </head>
     <body>
+ <!--Nav bar-->
+ <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" data-bs-theme="dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="./images/logo/logo2.png" alt="" height="40">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+
+
+          <li class="nav-item mar">
+            <a class="nav-link active" href="index.html">
+
+              Home
+
+            </a>
+          </li>
+          <li class="nav-item mar">
+            <a class="nav-link active" href="signup.html">
+
+              Sign Up
+
+            </a>
+          </li>
+          <li class="nav-item mar">
+            <a class="nav-link active" href="signin.html">
+
+              Sign In
+
+            </a>
+          </li>
+          <li class="nav-item mar">
+            <a class="nav-link active" href="about.html">
+
+              About Us
+
+
+            </a>
+          </li>
+          <li class="nav-item mar">
+            <a class="nav-link active" href="contactus.html">
+              Contact Us
+            </a>
+          </li>
+        </ul>
+
+        <form class="d-flex " role="search" >
+          <input class="form-control me-2" type="search" placeholder="Search City" aria-label="Search" />
+          <button class="btn btn-outline-success" type="submit">
+            Search
+          </button>
+        </form>
+      </div>
+    </div>
+  </nav>
+
+
+
+
+
+
     <div class="container">
         <h1 class="text-center my-3">Our Mentor</h1>
 
