--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="./images/weather app.png" alt="" height="40">
+          <img src="./images/weather app.png" alt="" class="logo-img1" height="50px">
         </a>
         <button
           class="navbar-toggler"
@@ -140,7 +140,7 @@
         <div class="row">
           <div class="footer-containers">
             <div class="foorte-logo-container">
-              <img src="./images/weather app.png"" alt="weather-type-logo" class="footer-logo">
+              <img src="./images/weather app.png" alt="weather-type-logo" class="footer-logo">
               <h1 class="footer-h1">Weather App</h1>
 
             </div>
