--- a/pages/signup.html
+++ b/pages/signup.html
@@ -26,6 +26,10 @@
 body{
     background: #fbf3ff;
 }
+.logo-img1{
+	border-radius: 50px;
+	margin-left: 30px;
+}
 .navcontainer{
   position:relative;
 }
@@ -112,7 +116,7 @@ margin-top: 110px;
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="./images/weather app.png" alt="" height="40">
+          <img src="/images/weather app.png" alt="" class="logo-img1" height="50px">
         </a>
         <button
           class="navbar-toggler"
