--- a/pages/signin.html
+++ b/pages/signin.html
@@ -18,7 +18,11 @@
 	}
             }
 body{
-    background: #fbf3ff;
+  background-image: url(/images/weather2.webp);
+	width: 100%;
+	height: 100vh;
+	background-position: center;
+	background-size: cover;
 }
 .logo-img1{
 	border-radius: 50px;
@@ -29,7 +33,7 @@ body{
 }
 .container{
     position: absolute;
-    max-width: 600px;
+    max-width: 500px;
     height: 500px;
 margin-top: 150px;
     /* margin: auto; */
@@ -41,7 +45,7 @@ margin-top: 150px;
 
 .myLeftCtn{
     position: relative;
-    background: #fff;
+   
     border-radius: 25px;
     height: 70%;
     padding: 25px;
