--- a/pages/signup.html
+++ b/pages/signup.html
@@ -23,12 +23,17 @@
 		height: 40px;
 	}
 }
-body{
-    background: #fbf3ff;
-}
+
 .logo-img1{
 	border-radius: 50px;
 	margin-left: 30px;
+}
+body{
+  background-image: url(/images/weather2.webp);
+	width: 100%;
+	height: 100vh;
+	background-position: center;
+	background-size: cover;
 }
 .navcontainer{
   position:relative;
@@ -52,7 +57,7 @@ margin-top: 110px;
 
 .myLeftCtn{
     position: relative;
-    background: #fff;
+   
     border-radius: 25px;
     height: 100%;
     padding: 25px;
